--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             margin: 10px;
 
         }
+
+        .btn {
+            display: block;
+        }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -27,6 +31,9 @@
 
 <body>
     <input type="text" id="url-input" hidden>
+
+    <div id="details">
+    </div>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -52,7 +59,7 @@
         </div>
     </nav>
 
-    <div class="download-btn">
+    <div class="download-btn" id="button">
         <button id="countdown-btn" class="btn btn-success px-5" onclick="startCountdown()">Verify</button>
         <p id="countdown"></p>
     </div>
@@ -139,7 +146,7 @@
         </div>
     </div>
 
-    <div class="download-btn">
+    <div class="download-btn" id="button">
         <button id="continue-btn" class="btn btn-success px-5" onclick="continueBtn()"
             style="display: none;">Continue</button>
         <p id="countdown1"></p>
@@ -160,7 +167,7 @@
                             <a href="index.html" class="text-dark">Home</a>
                         </li>
                         <li>
-                            <a href="#" class="text-dark">About</a>
+                            <a href="contact.html" class="text-dark">About</a>
                         </li>
                         <li>
                             <a href="#" class="text-dark">Contact</a>
@@ -201,7 +208,7 @@
             var countdownEl = document.getElementById("countdown");
             var countdownBtn = document.getElementById("countdown-btn");
             var continueBtn = document.getElementById("continue-btn");
-            var timeLeft = 1;
+            var timeLeft = 10;
             countdownBtn.style.display = "none";
             continueBtn.style.display = "none";
             var countdownInterval = setInterval(function () {
@@ -220,7 +227,7 @@
             var countdownBtn = document.getElementById("countdown-btn");
             var continueBtn = document.getElementById("continue-btn");
             var linkDiv = document.getElementById("redierct");
-            var timeLeft = 1;
+            var timeLeft = 10;
             countdownBtn.style.display = "none";
             continueBtn.style.display = "none";
             var countdownInterval = setInterval(function () {
@@ -235,6 +242,11 @@
                 timeLeft -= 1;
             }, 1000);
         }
+
+
+
+
+
 
 
 
