--- a/blog.html
+++ b/blog.html
@@ -46,11 +46,47 @@
             </div>
         </div>
     </nav>
+    <center>
+        <script type="text/javascript">
+            atOptions = {
+                'key': 'b314f9babd039e73881f50fc1c0c41f2',
+                'format': 'iframe',
+                'height': 250,
+                'width': 300,
+                'params': {}
+            };
+            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/b314f9babd039e73881f50fc1c0c41f2/invoke.js"></scr' + 'ipt>');
+        </script>
+    </center>
 
     <div class="download-btn">
         <button id="countdown-btn" class="btn btn-success px-5" onclick="startCountdown()">Verify</button>
         <p id="countdown"></p>
     </div>
+    <center>
+        <script type="text/javascript">
+            atOptions = {
+                'key': 'b314f9babd039e73881f50fc1c0c41f2',
+                'format': 'iframe',
+                'height': 250,
+                'width': 300,
+                'params': {}
+            };
+            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/b314f9babd039e73881f50fc1c0c41f2/invoke.js"></scr' + 'ipt>');
+        </script>
+    </center>
+    <center>
+        <script type="text/javascript">
+            atOptions = {
+                'key': 'b314f9babd039e73881f50fc1c0c41f2',
+                'format': 'iframe',
+                'height': 250,
+                'width': 300,
+                'params': {}
+            };
+            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/b314f9babd039e73881f50fc1c0c41f2/invoke.js"></scr' + 'ipt>');
+        </script>
+    </center>
 
     <!-- Main content -->
     <div class="container my-5">
@@ -91,13 +127,60 @@
                         </ul>
                     </div>
                 </div>
-
+                <center>
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': 'b314f9babd039e73881f50fc1c0c41f2',
+                            'format': 'iframe',
+                            'height': 250,
+                            'width': 300,
+                            'params': {}
+                        };
+                        document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/b314f9babd039e73881f50fc1c0c41f2/invoke.js"></scr' + 'ipt>');
+                    </script>
+                </center>
+                <center>
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': 'b314f9babd039e73881f50fc1c0c41f2',
+                            'format': 'iframe',
+                            'height': 250,
+                            'width': 300,
+                            'params': {}
+                        };
+                        document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/b314f9babd039e73881f50fc1c0c41f2/invoke.js"></scr' + 'ipt>');
+                    </script>
+                </center>
                 <div class="download-btn">
                     <button id="continue-btn" class="btn btn-success px-5" onclick="continueBtn()"
                         style="display: none;">Continue</button>
                     <p id="countdown1"></p>
                     <div id="link"></div>
                 </div>
+                <center>
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': 'b314f9babd039e73881f50fc1c0c41f2',
+                            'format': 'iframe',
+                            'height': 250,
+                            'width': 300,
+                            'params': {}
+                        };
+                        document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/b314f9babd039e73881f50fc1c0c41f2/invoke.js"></scr' + 'ipt>');
+                    </script>
+                </center>
+                <center>
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': 'b314f9babd039e73881f50fc1c0c41f2',
+                            'format': 'iframe',
+                            'height': 250,
+                            'width': 300,
+                            'params': {}
+                        };
+                        document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/b314f9babd039e73881f50fc1c0c41f2/invoke.js"></scr' + 'ipt>');
+                    </script>
+                </center>
                 <!-- Comment Box -->
                 <div class="card mt-4">
                     <div class="card-body">
