--- a/index.html
+++ b/index.html
@@ -58,11 +58,34 @@
             </div>
         </div>
     </nav>
-
+    <center>
+        <script type="text/javascript">
+            atOptions = {
+                'key': 'b314f9babd039e73881f50fc1c0c41f2',
+                'format': 'iframe',
+                'height': 250,
+                'width': 300,
+                'params': {}
+            };
+            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/b314f9babd039e73881f50fc1c0c41f2/invoke.js"></scr' + 'ipt>');
+        </script>
+    </center>
     <div class="download-btn" id="button">
         <button id="countdown-btn" class="btn btn-success px-5" onclick="startCountdown()">Verify</button>
         <p id="countdown"></p>
     </div>
+    <center>
+        <script type="text/javascript">
+            atOptions = {
+                'key': 'b314f9babd039e73881f50fc1c0c41f2',
+                'format': 'iframe',
+                'height': 250,
+                'width': 300,
+                'params': {}
+            };
+            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/b314f9babd039e73881f50fc1c0c41f2/invoke.js"></scr' + 'ipt>');
+        </script>
+    </center>
 
     <!-- Recent Blog Posts -->
     <div class="container my-5">
@@ -145,13 +168,60 @@
             </div>
         </div>
     </div>
-
+    <center>
+        <script type="text/javascript">
+            atOptions = {
+                'key': 'b314f9babd039e73881f50fc1c0c41f2',
+                'format': 'iframe',
+                'height': 250,
+                'width': 300,
+                'params': {}
+            };
+            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/b314f9babd039e73881f50fc1c0c41f2/invoke.js"></scr' + 'ipt>');
+        </script>
+    </center>
+    <center>
+        <script type="text/javascript">
+            atOptions = {
+                'key': 'b314f9babd039e73881f50fc1c0c41f2',
+                'format': 'iframe',
+                'height': 250,
+                'width': 300,
+                'params': {}
+            };
+            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/b314f9babd039e73881f50fc1c0c41f2/invoke.js"></scr' + 'ipt>');
+        </script>
+    </center>
     <div class="download-btn" id="button">
         <button id="continue-btn" class="btn btn-success px-5" onclick="continueBtn()"
             style="display: none;">Continue</button>
         <p id="countdown1"></p>
         <div id="redierct"></div>
     </div>
+    <center>
+        <script type="text/javascript">
+            atOptions = {
+                'key': 'b314f9babd039e73881f50fc1c0c41f2',
+                'format': 'iframe',
+                'height': 250,
+                'width': 300,
+                'params': {}
+            };
+            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/b314f9babd039e73881f50fc1c0c41f2/invoke.js"></scr' + 'ipt>');
+        </script>
+    </center>
+    <center>
+        <script type="text/javascript">
+            atOptions = {
+                'key': 'b314f9babd039e73881f50fc1c0c41f2',
+                'format': 'iframe',
+                'height': 250,
+                'width': 300,
+                'params': {}
+            };
+            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/b314f9babd039e73881f50fc1c0c41f2/invoke.js"></scr' + 'ipt>');
+        </script>
+    </center>
     <!-- Footer -->
     <footer class="bg-light text-center text-lg-start mt-5">
         <div class="container p-4">
