--- a/index.html
+++ b/index.html
@@ -345,6 +345,8 @@
     </script>
 
 
+<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5820394,document.body||document.documentElement)</script>
+
 
 </body>
 
