--- a/test.html
+++ b/test.html
@@ -7,7 +7,11 @@
     <h1>Link Shortener</h1>
     <form>
       <label for="url">URL:</label>
+      <input type="text" id="link1080p" name="link1080p" />
+      <input type="text" id="link720p" name="link720p" />
+
       <input type="text" id="url" name="url" />
+
       <button type="submit" onclick="shortenUrl()">Shorten</button>
     </form>
     <p id="shortenedUrl"></p>
