--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
       <button type="submit" onclick="shortenUrl()">Shorten</button>
     </form>
     <p id="shortenedUrl"></p>
+    <div id="linksList"></div>
     <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
     <script src="firebase.js"></script>
