--- a/dashboard.html
+++ b/dashboard.html
@@ -122,7 +122,7 @@
             .then((querySnapshot) => {
                 querySnapshot.forEach((doc) => {
                     let data = doc.data();
-                    var code = doc.data().code;
+                    var code = ;
                     var code1 = doc.data().code1;
                     blogSection.innerHTML += `
     <div class="card" style="width: 10rem;">
@@ -132,9 +132,9 @@
             <h5 class="card-title">${doc.data().title}</h5>
             <p class="card-text">
                 <a class="link" id="my-link1" href="index.html?${doc.id}&1080p" target="_blank" rel="noopener noreferrer">1080p</a> 
-                <a href='https://akshayy.tk/" + code + "' target='_blank'>akshayy.tk/" + code + "</a>
+                <a href='https://akshayy.tk/" + doc.data().code "' target='_blank'>akshayy.tk/" + doc.data().code "</a>
                 <a class="link" id="my-link2" href="index.html?${doc.id}&720p" target="_blank" rel="noopener noreferrer">720p</a>
-                <a href='https://akshayy.tk/" + code1 + "' target='_blank'>akshayy.tk/" + code1 + "</a>
+                <a href='https://akshayy.tk/" + doc.data().code1 "' target='_blank'>akshayy.tk/" + doc.data().code1 "</a>
             </p>
 
         </div>
