--- a/dashboard.html
+++ b/dashboard.html
@@ -130,9 +130,9 @@
             <h5 class="card-title">${doc.data().title}</h5>
             <p class="card-text">
                 <a class="link" id="my-link1" href="index.html?${doc.id}&1080p" target="_blank" rel="noopener noreferrer">1080p</a> 
-                <a href='https://akshayy.tk/" + ${doc.data().code} "' target='_blank'>akshayy.tk/" + ${doc.data().code} "</a>
+                <a href="https://akshayy.tk/${doc.data().code}" target='_blank'>akshayy.tk/${doc.data().code}"</a>
                 <a class="link" id="my-link2" href="index.html?${doc.id}&720p" target="_blank" rel="noopener noreferrer">720p</a>
-                <a href='https://akshayy.tk/" + ${doc.data().code1} "' target='_blank'>akshayy.tk/" + ${doc.data().code1} "</a>
+                <a href="https://akshayy.tk/${doc.data().code1}" target='_blank'>akshayy.tk/${doc.data().code1}"</a>
             </p>
 
         </div>
